--- a/animation/styles.css
+++ b/animation/styles.css
@@ -18,4 +18,20 @@ body {
   height: 200px;
   width: 300px;
   background: #ed5852;
+
+  animation-name: init;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(0.17, 2, 0.43, 0.82);
+}
+
+@keyframes init {
+  0%, 100% {
+    height: 200px;
+  }
+
+  50% {
+    height: 500px;
+    background: blue;
+  }
 }
